# qm-vamp-plugins

./: .gitignore  .gitmodules  CMakeLists.txt
